# RESTful-API-Animals-DNK

./: .devcontainer-internal.json  Makefile  README.md
app/: docker-compose.yml  pyproject.toml
app/animals_dnk/: Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
app/animals_dnk/animals_dnk/: asgi.py  settings.py  urls.py  wsgi.py
app/animals_dnk/app_dnk/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
app/animals_dnk/app_dnk/migrations/: 0001_initial.py
